Fix formulabar's item address input field vertical alignment
Make sure every element between item address parent and the
item address itself is place at the top

--- a/browser/css/toolbar.css
+++ b/browser/css/toolbar.css
@@ -163,6 +163,10 @@ w2ui-toolbar {
 	vertical-align: top;
 }
 
+#formulabar.expanded #tb_formulabar_item_address * {
+	vertical-align: top;
+}
+
 #presentation-toolbar {
 	bottom: 0;
 	background-color: var(--color-main-background);
